<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/def_width"
        android:layout_height="@dimen/edit_text_heigth"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/def_width"
        android:layout_height="@dimen/edit_text_heigth"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/def_width"
        android:layout_height="@dimen/def_heigth"
        android:layout_marginTop="@dimen/constraint_margin_top_big"
        android:ems="10"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="@dimen/def_width"
        android:layout_height="@dimen/def_heigth"
        android:layout_marginTop="@dimen/constraint_margin_top_big"
        android:ems="10"
        android:onClick="register"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignInButton"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/guestLoginButton"
        android:layout_width="@dimen/def_width"
        android:layout_height="@dimen/def_heigth"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:ems="10"
        android:onClick="loginAsGuest"
        android:text="@string/login_as_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="@dimen/def_width"
        android:layout_height="@dimen/def_heigth"
        android:layout_marginTop="@dimen/constraint_margin_top"
        android:ems="10"
        android:onClick="googleLogin"
        android:text="@string/google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestLoginButton" />

    <!--    <Button-->
<!--        android:id="@+id/googleSignInButton"-->
<!--        android:layout_width="268dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:onClick="loginWithGoogle"-->
<!--        android:text="@string/login_google"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.517"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/guestLoginButton" />-->

</androidx.constraintlayout.widget.ConstraintLayout>